# trayfier

./: .oxfmtrc.json  .oxlintrc.json  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  trayfier.code-workspace  tsconfig.json  vite.config.ts
.github/workflows/: release.yaml
src/: App.tsx  di.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ConfirmModal.tsx  CreateTrayAppForm.tsx  EditTrayAppActions.tsx  EditTrayAppactions.tsx  TrayAppInfo.tsx
src/features/TrayApp/application/: hideTrayApp.ts  showTrayApp.ts
src/features/TrayApp/domain/: TrayApp.ts  TrayAppHider.ts  TrayAppRepository.ts
src/features/TrayApp/infrastructure/: TauriTrayAppDisplayer.ts
src/layouts/: LayoutBase.tsx
src/modules/AppImage/application/: getAppImageUseCase.ts  removeAppImage.ts  removeAppImageUseCase.ts  saveAppImage.ts  saveAppImageUseCase.ts
src/modules/AppImage/application/test/: getAppImageUseCase.test.ts  removeAppImageUseCase.test.ts  saveAppImageUseCase.test.ts
src/modules/AppImage/domain/: AppImage.ts  AppImageRepository.ts
src/modules/AppImage/infrastructure/: TauriAppImageRepository.ts
src/modules/TrayApp/application/: hideTrayApp.ts  showTrayApp.ts
src/modules/TrayApp/components/: Icon.tsx  TrayAppInfo.tsx
src/modules/TrayApp/domain/: TrayApp.ts  TrayAppMenu.ts  TrayAppVisibilityManager.ts
src/modules/TrayApp/infrastructure/: TauriTrayAppDisplayer.ts
src/modules/TrayAppAction/: TrayAppAction.ts
src/modules/TrayAppAction/infrastructure/: TauriTrayAppActionExecutor.ts
src/modules/TrayfierTrayIcon/: createTrayfierTrayIcon.ts  toggleTrayfierWindow.ts
src/modules/Updater/: checkForUpdates.ts
src/routes/: CreateTrayApp.tsx  EditTrayApp.tsx  Home.tsx  Routes.ts
src/services/: createTrayApp.ts
src/stores/: useAppImageUseCasesStore.ts  useThemeStore.ts  useTrayAppsStore.ts
